--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
             <a
               href="mailto:info@devstudio.com"
               class="link header-contacts-link"
-              >info@devstudio.com</a
+            > <svg class="contacts-icon" width="21" height="16">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a
             >
           </li>
           <li class="contacts-item">
             <a href="tel:+380961111111" class="link header-contacts-link"
-              >+38 096 111 11 11</a
+              > <svg class="contacts-icon" width="16" height="21">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -68,12 +72,17 @@
           <button type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
-
+     
       <section class="section section-specifics">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="list">
             <li class="specifics-element">
+              <div class="specifics-icon">
+              <svg class="element-specifics-icon" width="65" height="70">
+                <use href="./images/symbol-defs.svg#icon-antenna"></use>
+              </svg>
+            </div>
               <h3 class="specifics-element-title">Внимание к деталям</h3>
               <p class="specifics-element-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -81,6 +90,11 @@
               </p>
             </li>
             <li class="specifics-element">
+              <div class="specifics-icon">
+                <svg class="element-specifics-icon" width="65" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="specifics-element-title">Пунктуальность</h3>
               <p class="specifics-element-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -88,6 +102,11 @@
               </p>
             </li>
             <li class="specifics-element">
+              <div class="specifics-icon">
+                <svg class="element-specifics-icon" width="65" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="specifics-element-title">Планирование</h3>
               <p class="specifics-element-text">
                 Равным образом консультация с широким активом в значительной
@@ -95,6 +114,11 @@
               </p>
             </li>
             <li class="specifics-element">
+              <div class="specifics-icon">
+                <svg class="element-specifics-icon" width="65" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="specifics-element-title">Современные технологии</h3>
               <p class="specifics-element-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -145,6 +169,22 @@
               <div class="developer-description">
                 <h3 class="team-element-title">Игорь Демьяненко</h3>
                 <p class="team-element-text" lang="en">Product Designer</p>
+                <ul class="developer-soc-list">
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link">
+                    <svg width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-element">
@@ -156,6 +196,22 @@
               <div class="developer-description">
                 <h3 class="team-element-title">Ольга Репина</h3>
                 <p class="team-element-text" lang="en">Frontend Developer</p>
+                <ul class="developer-soc-list">
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link">
+                    <svg width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-element">
@@ -167,6 +223,22 @@
               <div class="developer-description">
                 <h3 class="team-element-title">Николай Тарасов</h3>
                 <p class="team-element-text" lang="en">Marketing</p>
+                <ul class="developer-soc-list">
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link">
+                    <svg width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-element">
@@ -178,14 +250,56 @@
               <div class="developer-description">
                 <h3 class="team-element-title">Михаил Ермаков</h3>
                 <p class="team-element-text" lang="en">UI Designer</p>
+                <ul class="developer-soc-list">
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link">
+                    <svg width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg></a></li>
+                  <li class="developer-soc-item"><a href="" class="link developer-soc-link"><svg width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg></a></li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="section section-customers">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list customers-list"> 
+            <li class="customers-item"><a href="" class="customers-link"><svg width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-ya-co"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link"><svg width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-company-t-h"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link"><svg width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-company"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link"><svg width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link"><svg width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-brand"></use>
+            </svg></a></li>
+            <li class="customers-item"><a href="" class="customers-link"><svg width="106" height="60">
+              <use href="./images/symbol-defs.svg#icon-company-t-l"></use>
+            </svg></a></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container futer-container">
+        <div>
         <a href="./index.html" class="logo link"
           >Web<span class="footer-logo">Studio</span></a
         >
@@ -214,7 +328,25 @@
             </li>
           </ul>
         </address>
-      </div>
+        </div>
+        <div class="join"><h3 class="join-title">Присоединяйтесь</h3>
+          <ul class="join-soc-list">
+            <li class="join-soc-item"><a href="" class="link join-soc-link">
+              <svg width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+            <li class="join-soc-item"><a href="" class="link join-soc-link"><svg width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg></a></li>
+            <li class="join-soc-item"><a href="" class="link join-soc-link"><svg width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg></a></li>
+            <li class="join-soc-item"><a href="" class="link join-soc-link"><svg width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg></a></li>
+          </ul></div>
+      </div >
     </footer>
   </body>
 </html>
